--- a/pages/18896.html
+++ b/pages/18896.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      operator product expansion in nLab
+      field history in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      operator product expansion
+      field history
   </h1>
 
 
@@ -659,99 +659,35 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#see_also'>See also</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> the term <em>operator product expansion</em> (OPE) refers to <a class='existingWikiWord' href='/nlab/show/Taylor+series'>Taylor expansion</a> of products in the <a class='existingWikiWord' href='/nlab/show/observable'>algebra of quantum observables</a> of <a class='existingWikiWord' href='/nlab/show/field+observable'>field observables</a> <math class='maruku-mathml' display='inline' id='mathml_ecd4405a040b183c6770c29f3d69c0b9d65622d9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathbf{\Phi}^a(x)</annotation></semantics></math> in the form</p>
-<div class='maruku-equation' id='eq:SchematicOPE'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_ecd4405a040b183c6770c29f3d69c0b9d65622d9_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><msup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mi>b</mi></msup><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>∼</mo><mspace width='thickmathspace'></mspace><msup><mi>C</mi> <mrow><mi>a</mi><mi>b</mi></mrow></msup><msub><mrow></mrow> <mi>c</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><msup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mi>c</mi></msup><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
-  
-  \mathbf{\Phi}^a(x) \mathbf{\Phi}^b(y)
-  \;\sim\;
-  C^{a b}{}_c(x) \mathbf{\Phi}^c(y)
-  \,.
+<p>Given a <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a> with <a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a> <math class='maruku-mathml' display='inline' id='mathml_e2d665405108741a2d148507dd6b62d99eea451b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi><mover><mo>→</mo><mi>fb</mi></mover><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>E \overset{fb}{\to} \Sigma</annotation></semantics></math> over <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> <math class='maruku-mathml' display='inline' id='mathml_e2d665405108741a2d148507dd6b62d99eea451b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>\Sigma</annotation></semantics></math>, then a <em>field history</em> is a smooth <a class='existingWikiWord' href='/nlab/show/section'>section</a> of this field bundle <math class='maruku-mathml' display='inline' id='mathml_e2d665405108741a2d148507dd6b62d99eea451b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Φ</mi><mo>∈</mo><msub><mi>Γ</mi> <mi>Σ</mi></msub><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\Phi \in \Gamma_\Sigma(E)</annotation></semantics></math>.</p>
 
-</annotation></semantics></math></div>
-<p>Here “<math class='maruku-mathml' display='inline' id='mathml_ecd4405a040b183c6770c29f3d69c0b9d65622d9_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∼</mo></mrow><annotation encoding='application/x-tex'>\sim</annotation></semantics></math>” means something like “as <math class='maruku-mathml' display='inline' id='mathml_ecd4405a040b183c6770c29f3d69c0b9d65622d9_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> gets close to <math class='maruku-mathml' display='inline' id='mathml_ecd4405a040b183c6770c29f3d69c0b9d65622d9_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi></mrow><annotation encoding='application/x-tex'>y</annotation></semantics></math> the <a class='existingWikiWord' href='/nlab/show/expectation+value'>expectation values</a> in the given <a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a> of <a class='existingWikiWord' href='/nlab/show/observable'>observables</a> proportional to the left hand side approach those of observables proportional to the right hand side”, schematically:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ecd4405a040b183c6770c29f3d69c0b9d65622d9_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>⟨</mo><msup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><msup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mi>b</mi></msup><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo><mi>A</mi><mo>⟩</mo></mrow><munder><mo>⟶</mo><mrow><mi>x</mi><mo>→</mo><mi>y</mi></mrow></munder><msup><mi>C</mi> <mrow><mi>a</mi><mi>b</mi></mrow></msup><msub><mrow></mrow> <mi>c</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mrow><mo>⟨</mo><msup><mstyle mathvariant='bold'><mi>Φ</mi></mstyle> <mi>c</mi></msup><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo><mi>A</mi><mo>⟩</mo></mrow></mrow><annotation encoding='application/x-tex'>
-  \left\langle
-    \mathbf{\Phi}^a(x) \mathbf{\Phi}^b(y)
-    A
-  \right\rangle
-  \underset{x \to y}{\longrightarrow}
-  C^{a b}{}_c(x)
-  \left\langle
-    \mathbf{\Phi}^c(y)
-    A
-  \right\rangle
+<p>For every <a class='existingWikiWord' href='/nlab/show/Cauchy+surface'>Cauchy surface</a> <math class='maruku-mathml' display='inline' id='mathml_e2d665405108741a2d148507dd6b62d99eea451b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Σ</mi> <mi>p</mi></msub><mo>↪</mo><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>\Sigma_p \hookrightarrow \Sigma</annotation></semantics></math> the <a class='existingWikiWord' href='/nlab/show/restriction'>restriction</a> <math class='maruku-mathml' display='inline' id='mathml_e2d665405108741a2d148507dd6b62d99eea451b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Φ</mi><msub><mo stretchy='false'>|</mo> <mrow><msub><mi>Σ</mi> <mi>p</mi></msub></mrow></msub></mrow><annotation encoding='application/x-tex'>\Phi\vert_{\Sigma_p}</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_e2d665405108741a2d148507dd6b62d99eea451b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Φ</mi></mrow><annotation encoding='application/x-tex'>\Phi</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_e2d665405108741a2d148507dd6b62d99eea451b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Σ</mi> <mi>p</mi></msub></mrow><annotation encoding='application/x-tex'>\Sigma_p</annotation></semantics></math> may be thought of as the <em>field configuration</em> “at that time” and hence the change of <math class='maruku-mathml' display='inline' id='mathml_e2d665405108741a2d148507dd6b62d99eea451b_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Φ</mi><msub><mo stretchy='false'>|</mo> <mrow><msub><mi>Σ</mi> <mi>p</mi></msub></mrow></msub></mrow><annotation encoding='application/x-tex'>\Phi\vert_{\Sigma_p}</annotation></semantics></math> as the choice of Cauchy surface changes reflects the “history” of these configurations, whence the name.</p>
 
-</annotation></semantics></math></div>
-<p>If the <a class='existingWikiWord' href='/nlab/show/observable'>algebra of observables</a> is <a class='existingWikiWord' href='/nlab/show/representation'>represented</a> via <a class='existingWikiWord' href='/nlab/show/operator-valued+distribution'>operator-valued distributions</a> <a class='existingWikiWord' href='/nlab/show/action'>acting</a> on some <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a>, as commonly assumed, then this becomes an expansion of (<a class='existingWikiWord' href='/nlab/show/product+of+distributions'>distributional</a>) <a class='existingWikiWord' href='/nlab/show/operator+product'>operator products</a>, whence the name <em>operator product expansion</em> (<a href='#Wilson69'>Wilson 69</a>, <a href='#WilsonZimmermann72'>Wilson-Zimmermann 72</a>).</p>
+<p>For a <a class='existingWikiWord' href='/nlab/show/sigma-model'>sigma model</a> field theory a field history may be thought of as a <em>trajectory</em>.</p>
 
-<p>For <a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>conformal field theory</a> and specifically for <a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>2d CFT</a> the operator product expansion is well understood, is neatly captured by the concept of <a class='existingWikiWord' href='/nlab/show/vertex+operator+algebra'>vertex operator algebras</a>. Via the <em><a class='existingWikiWord' href='/nlab/show/conformal+bootstrap'>conformal bootstrap</a></em> the equation <a class='maruku-eqref' href='#eq:SchematicOPE'>(1)</a> defines or at least constrains the conformal field theory (<a href='#FerraraGrilloGatto73'>Ferrara-Grillo-Gatto 73</a>, <a href='#Polyakov74'>Polyakov 74</a>, <a href='#BelavinPolyakovZamolodchikov84'>Belavin-Polyakov-Zamolodchikov 84</a>).</p>
+<p>For more see at <em><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+A+first+idea+of+quantum+field+theory'>A first idea of quantum field theory</a></em> the chapter <em><a href='geometry+of+physics+--+A+first+idea+of+quantum+field+theory#Fields'>Fields</a></em>.</p>
 
-<p>Attempts to similarly use the concept of the operator product expansion to <em>define</em> more general <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> (and possibly <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>non-perturbative quantum field theory</a>) are discussed in (<a href='#HollandsOlbermann09'>Hollands-Olbermann 09</a>, <a href='#HollandHollands13'>Holland-Hollands 13</a>). The concept of <a class='existingWikiWord' href='/nlab/show/factorization+algebra'>factorization algebras</a>, rooted as it is in that of <a class='existingWikiWord' href='/nlab/show/vertex+operator+algebra'>vertex operator algebras</a>, may be thought of as meaning to axiomatize operator product expansions in the generality of Euclidean (<a class='existingWikiWord' href='/nlab/show/Wick+rotation'>Wick rotated</a>) field theory.</p>
-
-<p>Apparently <a href='#Kontsevich10'>Kontsevich 10</a> suggested that <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative QFT</a> should be thought of as the <a class='existingWikiWord' href='/nlab/show/deformation+theory'>deformation theory</a> controlled by a certain <a class='existingWikiWord' href='/nlab/show/L-infinity-algebra'>L-infinity algebra</a> which is constructed from OPEs.</p>
-
-<h2 id='see_also'>See also</h2>
+<h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/vertex+operator+algebra'>Vertex operator algebra</a></li>
-</ul>
-
-<h2 id='references'>References</h2>
-
-<p>The general concept is due to</p>
-
-<ul>
-<li id='Wilson69'>
-<p><a class='existingWikiWord' href='/nlab/show/Kenneth+Wilson'>Kenneth Wilson</a>, <em>Nonlagrangian models of current algebra</em>, Phys. Rev., 179:1499–1512, 1969.</p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+observable'>field observable</a></p>
 </li>
 
-<li id='WilsonZimmermann72'>
-<p><a class='existingWikiWord' href='/nlab/show/Kenneth+Wilson'>Kenneth Wilson</a>, <a class='existingWikiWord' href='/nlab/show/Wolfhart+Zimmermann'>Wolfhart Zimmermann</a>, <em>Operator product expansions and composite field operators in the general framework of quantum field theory</em>, Commun. Math. Phys., 24:87–106, 1972</p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/configuration+space+%28physics%29'>configuration space (physics)</a></p>
 </li>
 </ul>
 
-<p>and is further developed in</p>
-
-<ul>
-<li id='HollandsOlbermann09'>
-<p><a class='existingWikiWord' href='/nlab/show/Stefan+Hollands'>Stefan Hollands</a>, Heiner Olbermann, <em>Perturbative Quantum Field Theory via Vertex Algebras</em>, J. Math. Phys. 50:112304, 2009 (<a href='https://arxiv.org/abs/0906.5313'>arXiv:0906.5313</a>)</p>
-</li>
-
-<li id='HollandHollands13'>
-<p>Jan Holland, <a class='existingWikiWord' href='/nlab/show/Stefan+Hollands'>Stefan Hollands</a>, <em>Operator product expansion algebra</em>, J. Math. Phys. 54, 072302 (2013) (<a href='https://arxiv.org/abs/1205.4904'>arXiv:1205.4904</a>)</p>
-</li>
-</ul>
-
-<p>Brief survey is at</p>
-
-<ul>
-<li><em><a href='http://home.uni-leipzig.de/tet/?page_id=288'>Operator Product Expansion</a></em></li>
-</ul>
-
-<p>The relevance of the concept of OPEs to <a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>conformal field theory</a> (<a class='existingWikiWord' href='/nlab/show/conformal+bootstrap'>conformal bootstrap</a>) was noticed in</p>
-
-<ul>
-<li id='FerraraGrilloGatto73'>
-<p>S. Ferrara, A. F. Grillo, and R. Gatto, <em>Tensor representations of conformal algebra and conformally covariant operator product expansion</em>, Annals Phys. 76 (1973) 161–188</p>
-</li>
-
-<li id='Polyakov74'>
-<p><a class='existingWikiWord' href='/nlab/show/Alexander+Polyakov'>Alexander Polyakov</a>, <em>Nonhamiltonian approach to conformal quantum field theory</em>, Zh. Eksp. Teor. Fiz. 66 (1974) 23–42</p>
-</li>
-
-<li id='BelavinPolyakovZamolodchikov84'>
-<p><a class='existingWikiWord' href='/nlab/show/Alexander+Belavin'>Alexander Belavin</a>, <a class='existingWikiWord' href='/nlab/show/Alexander+Polyakov'>Alexander Polyakov</a>, and <a class='existingWikiWord' href='/nlab/show/Alexander+Zamolodchikov'>Alexander Zamolodchikov</a>, <em>Infinite conformal symmetry in two-dimensional quantum field theory</em>, Nucl. Phys. B241 (1984) 333–380</p>
-</li>
-</ul>
-
-<p>There was also a talk</p>
-
-<ul>
-<li id='Kontsevich10'><a class='existingWikiWord' href='/nlab/show/Maxim+Kontsevich'>Maxim Kontsevich</a>, talk at <em><a href='http://math.univ-lyon1.fr/~calaque/Colloque-schedule.htm'>Renormalization: algebraic, geometric and probabilistic aspects</a></em>, Institut Camille Jordan (Lyon) June 16 - 18, 2010</li>
-</ul>
+<p>
+</p>
 
 <p>
  
@@ -759,22 +695,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  3, 2018 02:50:51 
+  Created on January  3, 2018 02:10:00 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/operator+product+expansion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/operator+product+expansion/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/operator+product+expansion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/operator+product+expansion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/field+history" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/operator+product+expansion" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/field+history" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/operator+product+expansion" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/field+history" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/operator+product+expansion" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/field+history" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
