--- a/pages/18897.html
+++ b/pages/18897.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      conformal bootstrap in nLab
+      Alexander Belavin in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      conformal bootstrap
+      Alexander Belavin
   </h1>
 
 
@@ -308,61 +308,42 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>The <em>conformal bootstrap program</em> (<a href='#BelavinPolyakovZamolofchikov84'>Belavin-Polyakov-Zamolofchikov 84</a>) is an attempt to define an classify <a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>conformal field theories</a> <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>non-perturbatively</a> by <a class='existingWikiWord' href='/nlab/show/axiom'>axiomatizing</a> the properties of their <a class='existingWikiWord' href='/nlab/show/operator+product+expansion'>operator product expansion</a>/<a class='existingWikiWord' href='/nlab/show/correlator'>correlation functions</a>.</p>
-
-<p>The conformal bootstrap was proposed in the 1970s as a strategy for calculating the properties of second-order phase transitions. After spectacular success elucidating two-dimensional systems, little progress was made on systems in higher dimensions until a recent renaissance beginning in 2008 (<a href='#PolandDuffin16'>Poland-Duffin 16</a>).</p>
-
-<h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Wightman+axioms'>Wightman axioms</a>, <a class='existingWikiWord' href='/nlab/show/conformal+net'>conformal net</a></li>
-</ul>
-
-<h2 id='references'>References</h2>
-
-<ul>
-<li id='BelavinPolyakovZamolofchikov84'>
-<p><a class='existingWikiWord' href='/nlab/show/Alexander+Belavin'>Alexander Belavin</a>, <a class='existingWikiWord' href='/nlab/show/Alexander+Polyakov'>Alexander Polyakov</a>, <a class='existingWikiWord' href='/nlab/show/Alexander+Zamolodchikov'>Alexander Zamolodchikov</a>, (1984). <em>Infinite conformal symmetry in two-dimensional quantum field theory</em>. Nuclear Physics B. 241 (2): 333–380 (1984)</p>
-</li>
-
-<li id='PolandDuffin16'>
-<p><a class='existingWikiWord' href='/nlab/show/David+Poland'>David Poland</a>, <a class='existingWikiWord' href='/nlab/show/David+Simmons-Duffin'>David Simmons-Duffin</a>, <em>The conformal bootstrap</em>, Nature Physics 535–539 (2016) <a href='http://www.nature.com.edgesuite.net/nphys/journal/v12/n6/full/nphys3761.html'>doi:10.1038/nphys3761</a></p>
+    <ul>
+<li>
+<p><a href='http://www.itp.ac.ru/en/persons/belavin-aleksander-abramovich/'>webpage</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/David+Simmons-Duffin'>David Simmons-Duffin</a>, <em>TASI Lectures on the Conformal Bootstrap</em> (<a href='https://arxiv.org/abs/1602.07982'>arXiv:1602.07982</a>)</p>
-</li>
-
-<li>
-<p>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Conformal_bootstrap'>Conformal bootstrap</a></em></p>
+<p><a href='https://en.wikipedia.org/wiki/Alexander_Belavin'>Wikipedia entry</a></p>
 </li>
 </ul>
 
-<p>
-</p>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_4e924f91e9fe508c0e1e81e15f1cfdedf64cbfc2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/conformal+bootstrap'>conformal bootstrap</a>, <a class='existingWikiWord' href='/nlab/show/operator+product+expansion'>operator product expansion</a></li>
+</ul>
+
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on January  3, 2018 02:46:28 
+  Created on January  3, 2018 02:45:23 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/conformal+bootstrap" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/conformal+bootstrap/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/conformal+bootstrap" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/conformal+bootstrap" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Alexander+Belavin" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/conformal+bootstrap" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Alexander+Belavin" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/conformal+bootstrap" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Alexander+Belavin" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/conformal+bootstrap" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Alexander+Belavin" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
