--- a/pages/4276.html
+++ b/pages/4276.html
@@ -318,7 +318,17 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
+
+<ul>
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+history'>field history</a></p>
+</li>
+</ul>
 </li>
 
 <li>
@@ -365,6 +375,10 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/observable'>observables</a></p>
 
 <ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+observable'>field observable</a></p>
+</li>
+
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/local+observable'>local observables</a></p>
 </li>
@@ -636,14 +650,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 28, 2017 17:26:12 
+  Revised on January  3, 2018 02:13:03 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AQFT+and+operator+algebra+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AQFT+and+operator+algebra+contents/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/AQFT+and+operator+algebra+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AQFT+and+operator+algebra+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AQFT+and+operator+algebra+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AQFT+and+operator+algebra+contents/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/AQFT+and+operator+algebra+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AQFT+and+operator+algebra+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
