--- a/pages/5715.html
+++ b/pages/5715.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -904,7 +904,7 @@ margin-left: 0em;
 
 <p>The <em>configuration space</em> of a <a class='existingWikiWord' href='/nlab/show/mechanical+system'>physical system</a> is the <a class='existingWikiWord' href='/nlab/show/space'>space</a> of all possible configurations of the system.</p>
 
-<p>For example the configuration space of <math class='maruku-mathml' display='inline' id='mathml_a3c8b0b49f5e56702cc20332af956f8e5cb4615f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> point particles that roam around in some <a class='existingWikiWord' href='/nlab/show/manifold'>manifold</a> <math class='maruku-mathml' display='inline' id='mathml_a3c8b0b49f5e56702cc20332af956f8e5cb4615f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> (e.g. thought of as physical <a class='existingWikiWord' href='/nlab/show/space'>space</a>) is the <math class='maruku-mathml' display='inline' id='mathml_a3c8b0b49f5e56702cc20332af956f8e5cb4615f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-fold <a class='existingWikiWord' href='/nlab/show/cartesian+product'>Cartesian product</a> <math class='maruku-mathml' display='inline' id='mathml_a3c8b0b49f5e56702cc20332af956f8e5cb4615f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>X</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>X^n</annotation></semantics></math>. If the particles are constrained not to be at coincident points, then the configuration space is the corresponding <a class='existingWikiWord' href='/nlab/show/subspace'>subspace</a> of <math class='maruku-mathml' display='inline' id='mathml_a3c8b0b49f5e56702cc20332af956f8e5cb4615f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>X</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>X^n</annotation></semantics></math>. This happens to be the kind of <a class='existingWikiWord' href='/nlab/show/configuration+space+%28mathematics%29'>configuration space as typically considered in mathematics</a> see at <em><a class='existingWikiWord' href='/nlab/show/Fadell%27s+configuration+space'>Fadell&#39;s configuration space</a></em>.</p>
+<p>For example the configuration space of <math class='maruku-mathml' display='inline' id='mathml_75b5621ae9dfb20305ffadd4a8534c276b6a8922_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> point particles that roam around in some <a class='existingWikiWord' href='/nlab/show/manifold'>manifold</a> <math class='maruku-mathml' display='inline' id='mathml_75b5621ae9dfb20305ffadd4a8534c276b6a8922_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> (e.g. thought of as physical <a class='existingWikiWord' href='/nlab/show/space'>space</a>) is the <math class='maruku-mathml' display='inline' id='mathml_75b5621ae9dfb20305ffadd4a8534c276b6a8922_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-fold <a class='existingWikiWord' href='/nlab/show/cartesian+product'>Cartesian product</a> <math class='maruku-mathml' display='inline' id='mathml_75b5621ae9dfb20305ffadd4a8534c276b6a8922_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>X</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>X^n</annotation></semantics></math>. If the particles are constrained not to be at coincident points, then the configuration space is the corresponding <a class='existingWikiWord' href='/nlab/show/subspace'>subspace</a> of <math class='maruku-mathml' display='inline' id='mathml_75b5621ae9dfb20305ffadd4a8534c276b6a8922_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>X</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>X^n</annotation></semantics></math>. This happens to be the kind of <a class='existingWikiWord' href='/nlab/show/configuration+space+%28mathematics%29'>configuration space as typically considered in mathematics</a> see at <em><a class='existingWikiWord' href='/nlab/show/Fadell%27s+configuration+space'>Fadell&#39;s configuration space</a></em>.</p>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a> over <a class='existingWikiWord' href='/nlab/show/smooth+Lorentzian+space'>Lorentzian</a> <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> one is typically interested not in the configurations of fields “at a given time” (say on a fixed <a class='existingWikiWord' href='/nlab/show/Cauchy+surface'>Cauchy surface</a>) but in configuratios of fields on (an <a class='existingWikiWord' href='/nlab/show/open+subspace'>open subset</a> of) <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a>. This is then called the <em><a class='existingWikiWord' href='/nlab/show/space+of+trajectories'>space of trajectories</a></em> or <em><a class='existingWikiWord' href='/nlab/show/space+of+trajectories'>space of histories</a></em> of the system.</p>
 
@@ -918,6 +918,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/phase+space'>phase space</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+history'>field history</a></p>
+</li>
 </ul>
 
 <p>
@@ -926,14 +930,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 20, 2017 02:55:09 
+  Revised on January  3, 2018 02:10:15 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (77.56.177.247)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/configuration+space+%28physics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+%28physics%29/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/configuration+space+%28physics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+%28physics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/configuration+space+%28physics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+%28physics%29/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/configuration+space+%28physics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+%28physics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
