--- a/pages/8027.html
+++ b/pages/8027.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1298,7 +1298,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>AGT correspondence</em> (<a href='#AGT09'>AGT 09</a>) is a relation between the <a class='existingWikiWord' href='/nlab/show/partition+function'>partition function</a> of <math class='maruku-mathml' display='inline' id='mathml_3f07a9a3d04fe2f108ab2f51a2547758ed141b85_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><msup><mo stretchy='false'>)</mo> <mrow><mi>n</mi><mo>+</mo><mn>3</mn><mi>g</mi><mo>−</mo><mn>3</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>SU(2)^{n+3g-3}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory'>N=2 D=4 super Yang-Mills theory</a> and <a class='existingWikiWord' href='/nlab/show/Liouville+theory'>Liouville theory</a> on an <math class='maruku-mathml' display='inline' id='mathml_3f07a9a3d04fe2f108ab2f51a2547758ed141b85_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-punctured <a class='existingWikiWord' href='/nlab/show/Riemann+surface'>Riemann surface</a> <math class='maruku-mathml' display='inline' id='mathml_3f07a9a3d04fe2f108ab2f51a2547758ed141b85_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>C</mi> <mrow><mi>g</mi><mo>,</mo><mi>n</mi></mrow></msub></mrow><annotation encoding='application/x-tex'>C_{g,n}</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/genus'>genus</a> <math class='maruku-mathml' display='inline' id='mathml_3f07a9a3d04fe2f108ab2f51a2547758ed141b85_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi></mrow><annotation encoding='application/x-tex'>g</annotation></semantics></math> (from which the <a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>super Yang-Mills theory</a> is obtained by <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>compactifying</a> the worldvolume <a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a> of two <a class='existingWikiWord' href='/nlab/show/M5-brane'>M5-branes</a>, see at <a class='existingWikiWord' href='/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory'>N=2 D=4 super Yang-Mills theory</a>, the section <a href='N%3D2+D%3D4+super+Yang-Mills+theory#ConstructionByCompactificationOf5Branes'>Construction by compactification</a>).</p>
+<p>The <em>AGT correspondence</em> (<a href='#AGT09'>AGT 09</a>) is a relation between the <a class='existingWikiWord' href='/nlab/show/partition+function'>partition function</a> of <math class='maruku-mathml' display='inline' id='mathml_4229b365068c8ab2ab4cdbacc784586852a7fb98_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SU</mi><mo stretchy='false'>(</mo><mn>2</mn><msup><mo stretchy='false'>)</mo> <mrow><mi>n</mi><mo>+</mo><mn>3</mn><mi>g</mi><mo>−</mo><mn>3</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>SU(2)^{n+3g-3}</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory'>N=2 D=4 super Yang-Mills theory</a> and <a class='existingWikiWord' href='/nlab/show/Liouville+theory'>Liouville theory</a> on an <math class='maruku-mathml' display='inline' id='mathml_4229b365068c8ab2ab4cdbacc784586852a7fb98_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-punctured <a class='existingWikiWord' href='/nlab/show/Riemann+surface'>Riemann surface</a> <math class='maruku-mathml' display='inline' id='mathml_4229b365068c8ab2ab4cdbacc784586852a7fb98_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>C</mi> <mrow><mi>g</mi><mo>,</mo><mi>n</mi></mrow></msub></mrow><annotation encoding='application/x-tex'>C_{g,n}</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/genus'>genus</a> <math class='maruku-mathml' display='inline' id='mathml_4229b365068c8ab2ab4cdbacc784586852a7fb98_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi></mrow><annotation encoding='application/x-tex'>g</annotation></semantics></math> (from which the <a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>super Yang-Mills theory</a> is obtained by <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>compactifying</a> the worldvolume <a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a> of two <a class='existingWikiWord' href='/nlab/show/M5-brane'>M5-branes</a>, see at <a class='existingWikiWord' href='/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory'>N=2 D=4 super Yang-Mills theory</a>, the section <a href='N%3D2+D%3D4+super+Yang-Mills+theory#ConstructionByCompactificationOf5Branes'>Construction by compactification</a>).</p>
 
 <p>More generally, this construction yields something like a decomposition of the <a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-superconformal QFT</a> into a <a class='existingWikiWord' href='/nlab/show/2d+SCFT'>2d SCFT</a> “with values in <a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>4d SYM field theory</a>” (e.g. <a href='#Tachikawa10'>Tachikawa 10, slide 25 (33 of 54)</a>). Hence composition with any kind of suitable invariant of the 4d field theories yields an actual <a class='existingWikiWord' href='/nlab/show/2d+SCFT'>2d SCFT</a>, for instance taking the superconformal index in 4d yields a <a class='existingWikiWord' href='/nlab/show/2d+TQFT'>2d TQFT</a> (<a href='#GPRR10'>GPRR 10</a>). In this picture of “4d-SYM field theory-valued <a class='existingWikiWord' href='/nlab/show/2d+SCFT'>2d SCFT</a>” one has the following correspondences:</p>
 
@@ -1330,7 +1330,7 @@ margin-left: 0em;
 
 <ul>
 <li id='Gaiotto09'>
-<p><a class='existingWikiWord' href='/nlab/show/Davide+Gaiotto'>Davide Gaiotto</a>, <em><math class='maruku-mathml' display='inline' id='mathml_3f07a9a3d04fe2f108ab2f51a2547758ed141b85_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> dualities</em> (<a href='http://arxiv.org/abs/0904.2715'>arXiv:0904.2715</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Davide+Gaiotto'>Davide Gaiotto</a>, <em><math class='maruku-mathml' display='inline' id='mathml_4229b365068c8ab2ab4cdbacc784586852a7fb98_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> dualities</em> (<a href='http://arxiv.org/abs/0904.2715'>arXiv:0904.2715</a>)</p>
 </li>
 
 <li id='AGT09'>
@@ -1352,7 +1352,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Abhijit Gadde, <em><math class='maruku-mathml' display='inline' id='mathml_3f07a9a3d04fe2f108ab2f51a2547758ed141b85_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N}= 2</annotation></semantics></math> Dualities and 2d TQFT</em> 2012 (<a class='existingWikiWord' href='/nlab/files/Gadde2dTQFT.pdf' title='pdf'>pdf</a>)</p>
+<p>Abhijit Gadde, <em><math class='maruku-mathml' display='inline' id='mathml_4229b365068c8ab2ab4cdbacc784586852a7fb98_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N}= 2</annotation></semantics></math> Dualities and 2d TQFT</em> 2012 (<a class='existingWikiWord' href='/nlab/files/Gadde2dTQFT.pdf' title='pdf'>pdf</a>)</p>
 </li>
 
 <li>
@@ -1370,7 +1370,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>A. A. Belavin, M. A. Bershtein, B. L. Feigin, A. V. Litvinov, G. M. Tarnopolsky, <em>Instanton moduli spaces and bases in coset conformal field theory</em>, <a href='arxiv/1111.2803'>http://arxiv.org/abs/1111.2803</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Alexander+Belavin'>Alexander Belavin</a>, M. A. Bershtein, B. L. Feigin, A. V. Litvinov, G. M. Tarnopolsky, <em>Instanton moduli spaces and bases in coset conformal field theory</em>, <a href='arxiv/1111.2803'>http://arxiv.org/abs/1111.2803</a></p>
 </li>
 
 <li>
@@ -1390,7 +1390,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>A. Belavin, V. Belavin, <em>AGT conjecture and integrable structure of conformal field theory for <math class='maruku-mathml' display='inline' id='mathml_3f07a9a3d04fe2f108ab2f51a2547758ed141b85_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>c=1</annotation></semantics></math></em>, Nucl.Phys.B850:199-213 (2011) <a href='http://arxiv.org/abs/1102.0343'>arxiv/1102.0343</a></p>
+<p>A. Belavin, V. Belavin, <em>AGT conjecture and integrable structure of conformal field theory for <math class='maruku-mathml' display='inline' id='mathml_4229b365068c8ab2ab4cdbacc784586852a7fb98_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>c=1</annotation></semantics></math></em>, Nucl.Phys.B850:199-213 (2011) <a href='http://arxiv.org/abs/1102.0343'>arxiv/1102.0343</a></p>
 </li>
 
 <li>
@@ -1431,14 +1431,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August 20, 2014 02:36:12 
-  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
-  (161.53.130.104)
+  Revised on January  3, 2018 02:45:47 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AGT+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AGT+correspondence/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/AGT+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AGT+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AGT+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AGT+correspondence/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/AGT+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AGT+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
